--- a/pleo-antaeus-schedule/src/main/resources/quartz.properties
+++ b/pleo-antaeus-schedule/src/main/resources/quartz.properties
@@ -6,6 +6,6 @@ org.quartz.scheduler.instanceName = antaeus
 org.quartz.scheduler.instanceId = AUTO
 org.quartz.threadPool.threadCount = 5
 org.quartz.dataSource.postgres.driver = org.postgresql.Driver
-org.quartz.dataSource.postgres.URL = jdbc:postgresql://localhost:5432/antaeus
+org.quartz.dataSource.postgres.URL = jdbc:postgresql://postgres:5432/antaeus
 org.quartz.dataSource.postgres.user = antaeus
 org.quartz.dataSource.postgres.password = antaeuspwd
